src/test/good/variant.jb
variant {
	int num;
	string str;
} my_variant;

int main() {
	my_variant var1 = :num(1);
	my_variant var2 = :str("a");

	string s = "";
	s = case var1 of
		| :num(n) -> ":num(" + int_to_string(n) + ")"
		| :str(s) -> (":str(" + s + ")");
	print(s);

	s = case var2 of
		| :num(n) -> ":num(" + int_to_string(n) + ")"
		| :str(s) -> ":str(" + s + ")";
	print(s);
}
