src/test/bad/casting1.jb
int main() {
	int_to_string("A");
}
